# empi

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  empi_bidir_ring.c  empi_bidir_ring.cpp  empi_helloworld.cpp  empi_ibcast_allreduce.cpp  empi_send_recv.c  empi_send_recv.cpp  empi_submit.cpp  empi_submit_async.cpp  empi_test_isend_irecv.cpp  empi_test_send_recv.cpp  mpi_bidir_ring.c  mpi_bidir_ring.cpp  mpi_helloworld.c  mpi_send_recv.c  mpi_send_recv.cpp  mpi_test_allreduce.cpp  mpi_test_bcast.cpp  mpi_test_ibcast.cpp  mpi_test_isend_irecv.cpp  mpi_test_iusend_iurecv.cpp  mpi_test_send_recv.cpp  mpi_test_usend_urecv.cpp
examples/LULESH/: CMakeLists.txt  Makefile  lulesh-comm.cc  lulesh-init.cc  lulesh-util.cc  lulesh-viz.cc  lulesh.cc  lulesh.h  lulesh_tuple.h
examples/Pseudo-codes/: 2D stencil.cpp  Neighbourhood communication.cpp  p2p.cpp  ring.cpp
examples/all_reduce/: CMakeLists.txt  empi_allreduce.cpp  mpi_allreduce.cpp  mpl_allreduce.cpp  umpi_allreduce.cpp
examples/bcast/: CMakeLists.txt  empi_bcast.cpp  mpi_bcast.cpp  mpl_bcast.cpp  umpi_bcast.cpp
examples/bdring/: CMakeLists.txt  empi_bdring.cpp  empi_bdring_isend_irecv.cpp  mpi_bdring.cpp  mpi_bdring_isend_irecv.cpp  mpi_bdring_iusend_iurecv.cpp  mpl_bdring.cpp  mpl_bdring_isend_irecv.cpp  umpi_bdring.cpp
examples/empi_features/: CMakeLists.txt  empi_bidir_ring.cpp  empi_ibcast_allreduce.cpp  empi_send_recv.cpp  empi_submit.cpp  empi_submit_async.cpp
examples/ibcast/: CMakeLists.txt  empi_ibcast.cpp  mpi_ibcast.cpp  mpl_ibcast.cpp  umpi_ibcast.cpp
examples/pack-unpack-submatrix/: pack-unpack-submatrix.cpp
examples/ping_pong/: CMakeLists.txt  empi_ping_pong.cpp  mpi_ping_pong.cpp  mpl_ping_pong.cpp  umpi_ping_pong.cpp
examples/type-struct-array/: type_struct_array.c
examples/type-struct-simple/: type_struct_simple.c
examples/type-vector-simple/: type-vector-simple.cpp
examples/vibrating_string/: CMakeLists.txt  empi_vibrating_string.cpp  mpi_vibrating_string.cpp  mpl_vibrating_string.cpp  umpi_vibrating_string.cpp
include/: empi.h
include/empi/: async_event.hpp  config.hpp.in  context.hpp  datatype.hpp  defines.hpp  empi.hpp  empi_defines.hpp  message_group.hpp  message_grp_hdl.hpp  request.hpp  request_pool.hpp  tag.hpp  type_traits.hpp  utils.hpp
open-mpi-source/openmpi-4.1.4/: AUTHORS  Makefile
open-mpi-source/openmpi-4.1.4/autom4te.cache/: requests
open-mpi-source/openmpi-4.1.4/config/: autogen_found_items.m4
open-mpi-source/openmpi-4.1.4/ompi/: libmpi.la
open-mpi-source/openmpi-4.1.4/ompi/.libs/: libmpi.lai  libmpi.so.40.30.4  libmpi.so.40.30.4T
open-mpi-source/openmpi-4.1.4/ompi/datatype/: Makefile
open-mpi-source/openmpi-4.1.4/ompi/debuggers/: libompi_dbg_msgq.la
open-mpi-source/openmpi-4.1.4/ompi/etc/: Makefile  Makefile.in
open-mpi-source/openmpi-4.1.4/ompi/include/: Makefile.in  mpi.h
open-mpi-source/openmpi-4.1.4/opal/.libs/: libopen-pal.so.40
open-mpi-source/openmpi-4.1.4/opal/datatype/: Makefile.in  libdatatype.la
open-mpi-source/openmpi-4.1.4/opal/etc/: Makefile
open-mpi-source/openmpi-4.1.4/opal/include/: Makefile  opal_config.h  opal_config.h.in
open-mpi-source/openmpi-4.1.4/opal/util/: Makefile  Makefile.in
open-mpi-source/openmpi-4.1.4/orte/: Makefile  libruntime_mpir.la
open-mpi-source/openmpi-4.1.4/orte/.libs/: libopen-rte.so.40.30.2  libopen-rte.so.40.30.2T
open-mpi-source/openmpi-4.1.4/orte/include/: Makefile
open-mpi-source/openmpi-4.1.4/orte/orted/: orted_submit.lo
open-mpi-source/openmpi-4.1.4/oshmem/: Makefile
open-mpi-source/openmpi-4.1.4/oshmem/include/: Makefile
open-mpi-source/openmpi-4.1.4/test/: Makefile  Makefile.in
openmpi-4.1.4/: Makefile  Makefile.in  VERSION  aclocal.m4  config.lt  config.status  libtool
openmpi-4.1.4/autom4te.cache/: traces.0
openmpi-4.1.4/config/: Makefile  Makefile.in
openmpi-4.1.4/contrib/: Makefile  Makefile.in
openmpi-4.1.4/ompi/: Makefile  Makefile.in  libmpi.la  libompi_mpir.la
openmpi-4.1.4/ompi/.libs/: libmpi.so.40.30.4  libmpi.so.40.30.4T
openmpi-4.1.4/ompi/datatype/: Makefile  Makefile.in
openmpi-4.1.4/ompi/debuggers/: Makefile  Makefile.in  libdebuggers.la  libompi_debugger_canary.la
openmpi-4.1.4/ompi/etc/: Makefile
openmpi-4.1.4/ompi/include/: Makefile  mpi.h  mpi.h.in  mpif-c-constants.h  mpif-f08-types.h
openmpi-4.1.4/opal/: Makefile  Makefile.in  libopen-pal.la
openmpi-4.1.4/opal/.libs/: libopen-pal.lai  libopen-pal.so.40.30.2
openmpi-4.1.4/opal/datatype/: Makefile  libdatatype_reliable.la
openmpi-4.1.4/opal/etc/: Makefile  Makefile.in
openmpi-4.1.4/opal/include/: Makefile  Makefile.in
openmpi-4.1.4/opal/util/: Makefile  libopalutil.la
openmpi-4.1.4/orte/: Makefile  Makefile.in  libopen-rte.la
openmpi-4.1.4/orte/.libs/: libopen-rte.lai  libopen-rte.so.40.30.2  libopen-rte.so.40.30.2T
openmpi-4.1.4/orte/etc/: Makefile  Makefile.in
openmpi-4.1.4/orte/include/: Makefile  Makefile.in
openmpi-4.1.4/oshmem/: Makefile  Makefile.in
openmpi-4.1.4/oshmem/include/: Makefile  Makefile.in
openmpi-4.1.4/test/: Makefile
openmpi-4.1.4/test/asm/: Makefile  Makefile.in
openmpi-4.1.4/test/class/: Makefile  Makefile.in
openmpi-4.1.4/test/datatype/: Makefile
openmpi-4.1.4/test/dss/: Makefile
openmpi-4.1.4/test/event/: Makefile  Makefile.in
openmpi-4.1.4/test/monitoring/: Makefile  Makefile.in  check_monitoring  example_reduce_count  monitoring_test  test_overhead  test_pvar_access
openmpi-4.1.4/test/mpool/: Makefile  Makefile.in
openmpi-4.1.4/test/spc/: Makefile  Makefile.in  spc_test
openmpi-4.1.4/test/support/: Makefile  Makefile.in
openmpi-4.1.4/test/threads/: Makefile
openmpi-4.1.4/test/util/: Makefile
pseudocodes/examples/: empi_bidir_ring.cpp  empi_helloworld.cpp  empi_send_recv.cpp  mpi_helloworld.cpp
pseudocodes/examples/Pseudo-codes/: Isend-Irecv.cpp  children-parent.cpp
scripts/: beautify.sh  build_openmpi.sh  common.py  lulesh.py  minibench.py  requirements.txt  test.sh  test2.sh  vibrating_string.py
test/: CMakeLists.txt  static_main.cpp
(+5199 files in other folders)
